# NativeOne

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/beaven/nativeone/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/fragment/: fragment_shader_hello_triangle2.glsl
app/src/main/assets/vertex/: vertex_shader_hello_triangle2.glsl
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/render/: GLRenderContext.cpp  GLRenderContext.h
app/src/main/cpp/sample/: GLBaseSample.h  GLBaseSampleType.h  NativeTriangle.cpp  NativeTriangle.h  NativeTriangle2.cpp  NativeTriangle2.h  NativeTriangle3.cpp  NativeTriangle3.h
app/src/main/cpp/utils/: GLUtils.cpp  GLUtils.h  LogUtils.h
app/src/main/java/com/beaven/nativeone/: IMyNativeRendererType.kt  MainActivity.kt  NativeRender.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/beaven/nativeone/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
